@@ -17,11 +17,19 @@ import java.util.Collections;
 import java.util.List;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
+// ✅ THÊM IMPORT ĐỂ ĐỌC USER TỪ DATABASE
+import com.nhom7.quiz.quizapp.service.userService.LoginService;
+import com.nhom7.quiz.quizapp.model.User;
+
 @Component
 public class JwtFilter extends OncePerRequestFilter {
 
     @Autowired
     private JwtUtil jwtUtil;
+
+    // ✅ THÊM LOGINSERVICE ĐỂ ĐỌC USER TỪ DATABASE
+    @Autowired
+    private LoginService loginService;
 
     @Override
     protected void doFilterInternal(@NonNull HttpServletRequest request,
@@ -36,14 +44,23 @@ public class JwtFilter extends OncePerRequestFilter {
             if (jwtUtil.validateToken(token)) {
                 String username = jwtUtil.extractUsername(token);
                 if (username != null) {
-                    // ✅ THÊM AUTHORITIES DỰA TRÊN USERNAME
-                    List<SimpleGrantedAuthority> authorities = Collections.emptyList();
-                    if ("admin".equals(username)) {
-                        authorities = List.of(new SimpleGrantedAuthority("ROLE_ADMIN"));
+                    // ✅ ĐỌC USER TỪ DATABASE ĐỂ LẤY ROLE CHÍNH XÁC
+                    User user = loginService.findByUsername(username);
+                    List<SimpleGrantedAuthority> authorities;
+
+                    if (user != null) {
+                        // ✅ SỬ DỤNG ROLE TỪ DATABASE
+                        String role = user.getRole();
+                        if ("ADMIN".equalsIgnoreCase(role)) {
+                            authorities = List.of(new SimpleGrantedAuthority("ROLE_ADMIN"));
+                        } else {
+                            authorities = List.of(new SimpleGrantedAuthority("ROLE_USER"));
+                        }
                     } else {
+                        // Fallback nếu không tìm thấy user
                         authorities = List.of(new SimpleGrantedAuthority("ROLE_USER"));
                     }
-                    
+
                     UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(
                             username, null, authorities);
 
